--- a/user/om_73/range rover/generations.html
+++ b/user/om_73/range rover/generations.html
@@ -45,8 +45,8 @@
 <script src="timeago/test/test_helpers.js" type="text/javascript"></script>
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
-<script src="js/global.js"></script>
 <link rel="stylesheet" href="css/global.css">
+<link rel="icon" href="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title> Jaguar Land Rover Ranger Rover - Generations </title>
@@ -249,35 +249,7 @@
     </style>
 </head>
 <body>
-
-    <nav class="navbar">
-        <!-- <div class="brand-name">
-            <a class="br-name">Group - 3</a>
-        </div> -->
-        <ul>
-            <li class="nav-link" onclick="info()">
-                <a class="link"> <i class="fa fa-info-circle nav-ic"></i>
-                  <span class="nav-strg">Info</span>
-                </a>
-            </li>
-            <li class="nav-link" onclick="generations()">
-                <a class="link"> <i class="fa fa-bus nav-ic"></i>
-                    <span class="nav-strg">Generations</span>
-                  </a>
-            </li>
-            <li class="nav-link" onclick="expanded()">
-            <a class="link"> <i class="fa fa-shapes nav-ic"></i>
-                <span class="nav-strg">Expanded</span>
-              </a>
-        </li>
-            <li class="nav-link" onclick="home()">
-                <a class="link"> <i class="fa fa-home nav-ic"></i>
-                    <span class="nav-strg">Home</span>
-                  </a>
-            </li>
-        </ul>
-    </nav>
-<br><br><br><br><br>
+    <div id="navbar"></div><br><br><br><br><br>
 
 
 <center>
@@ -388,6 +360,7 @@ A major change came in 2010: a range of new engines was offered, with 5-litre ve
         <a class="mini-nav-link"> <i class="fa fa-home"></i> Home</a>
     </div>
 </footer> -->
+    <div id="explore"></div>
 <script src="js/global.js"></script>
 </body>
 </html>
