--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -45,7 +45,6 @@
 <script src="timeago/test/test_helpers.js" type="text/javascript"></script>
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
-<script src="js/global.js"></script>
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -62,10 +61,12 @@
     </style>
 </head>
 <body>
-
+    <div id="navbar"></div><br><br><br><br><br>
     <center>
         <h1>Generations</h1>
     </center>
 
+    <div id="explore"></div>
+    <script src="js/global.js"></script>
 </body>
 </html>
