--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -45,7 +45,8 @@
 <script src="timeago/test/test_helpers.js" type="text/javascript"></script>
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
-<script src="js/global.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <link rel="stylesheet" href="css/global.css">
 <link rel="icon" href="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
@@ -171,41 +172,10 @@
     }
 }
     </style>
+    <script></script>
 </head>
 <body>
-
-    <nav class="navbar">
-        <!-- <div class="brand-name">
-            <a class="br-name">Group - 3</a>
-        </div> -->
-        <ul>
-            <li class="nav-link" onclick="info()">
-                <a class="link"> <i class="fa fa-info-circle nav-ic"></i>
-                  <span class="nav-strg">Info</span>
-                </a>
-            </li>
-            <li class="nav-link" onclick="generations()">
-                <a class="link"> <i class="fa fa-bus nav-ic"></i>
-                    <span class="nav-strg">Generations</span>
-                  </a>
-            </li>
-            <li class="nav-link" onclick="expanded()">
-            <a class="link"> <i class="fa fa-shapes nav-ic"></i>
-                <span class="nav-strg">Expanded</span>
-              </a>
-        </li>
-            <li class="nav-link" onclick="home()">
-                <a class="link"> <i class="fa fa-home nav-ic"></i>
-                    <span class="nav-strg">Home</span>
-                  </a>
-            </li>
-        </ul>
-    </nav>
-<br><br><br><br><br>
-    <!-- <center>
-        <h1>Range Rover</h1>
-    </center> -->
-
+<div id="navbar"></div><br><br><br><br><br>
     <div class="cover">
         <center>
         <h1>Welcome!</h1>
@@ -224,49 +194,7 @@
     </div>
     </div>
 
-<div class="container">
-    <div class="mid-section">
-        <img class="app-right" src="https://di-uploads-pod16.dealerinspire.com/wildejaguarlandroversarasota/uploads/2019/08/jaguar-reliability.jpg">
-        <h1>Our Approach</h1>
-        <h6>
-            The challenge to build a sustainable, cleaner, greener
-world is one we at Jaguar Land Rover embrace with relish.
-Our innovative technologies don’t just make better cars,
-they can help so many people live better lives in so many
-ways. That is what we are about at Jaguar Land Rover.
-Making the world a better place.
-
-        </h6>
-    </div>
-</div>
 <br><br>
-<div class="mini-container">
-    <img class="img img-first" draggable="false" src="https://www.carlogos.org/logo/Jaguar-logo-640x430.jpg">
-<div class="first-sub-cont">
-    <h2>Jaguar Land Rover | Tata Motors  </h2>
-    <p class="details">
-        Jaguar Land Rover Automotive PLC is the holding company of Jaguar Land Rover Limited, and is a British multinational automobile manufacturer which produces luxury vehicles and sport utility vehicles. Jaguar Land Rover is a subsidiary of Tata Motors Limited and has its head office in Whitley, Coventry, UK. The principal activity of Jaguar Land Rover Limited is the design, development, manufacture and sale of vehicles bearing the Jaguar and Land Rover marques.
-
-        <p class="know-more"  onclick="jaguarInfo()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
-    </p>
-</div>
-</div>
-<div class="container">
-    <div class="mid-section">
-        <img class="app-right" src="img/rr-1.webp">
-        <h1>Customers And Products</h1>
-        <h5>SUSTAINABLE CHOICES FOR TODAY'S WORLD</h5>
-        <h6>
-            The challenge to build a sustainable, cleaner, greener
-world is one we at Jaguar Land Rover embrace with relish.
-Our innovative technologies don’t just make better cars,
-they can help so many people live better lives in so many
-ways. That is what we are about at Jaguar Land Rover.
-Making the world a better place.
-
-        </h6>
-    </div>
-</div>
 
     <div class="second-container">
 
@@ -322,15 +250,27 @@ Making the world a better place.
 
     </div>
 
+<br><br>
+    <div class="mini-container">
+        <img class="img img-first" draggable="false" src="https://www.carlogos.org/logo/Jaguar-logo-640x430.jpg">
+    <div class="first-sub-cont">
+        <h2>Jaguar Land Rover  </h2>
+        <p class="details">
+            Jaguar Land Rover Automotive PLC is the holding company of Jaguar Land Rover Limited, and is a British multinational automobile manufacturer which produces luxury vehicles and sport utility vehicles. Jaguar Land Rover is a subsidiary of Tata Motors Limited and has its head office in Whitley, Coventry, UK. The principal activity of Jaguar Land Rover Limited is the design, development, manufacture and sale of vehicles bearing the Jaguar and Land Rover marques.
+
+            <p class="know-more"  onclick="jaguarInfo()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+        </p>
+    </div>
+    </div>
 
     <div class="second-container">
 
         <div class="section-title">
-            <h2>Jaguar</h2>
+            <h2>Other Models</h2>
         </div>
 
         <div class="gr-card">
-            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723311721183SH.jpg">
+            <img class="gr-img" src="https://content.api.news/v3/images/bin/04e66ab071a52248456fabb50870181f">
             <div class="gr-details">
                 <h4> Jaguar F-Pace</h4>
                 <div class="sh-detail-secondary">
@@ -343,7 +283,7 @@ Making the world a better place.
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723292101154IR.jpg">
+            <img class="gr-img" src="https://wallpapercave.com/wp/wp1937976.jpg">
             <div class="gr-details">
                 <h4> Jaguar F-Type COUPÉ</h4>
                 <div class="sh-detail-secondary">
@@ -356,7 +296,7 @@ Making the world a better place.
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723302351161KD.jpg">
+            <img class="gr-img" src="https://wallpaperaccess.com/full/5371325.jpg">
             <div class="gr-details">
                 <h4> Jaguar XE</h4>
                 <div class="sh-detail-secondary">
@@ -371,6 +311,21 @@ Making the world a better place.
 
     </div>
 
+    <div class="container">
+        <div class="mid-section">
+            <img class="app-right" src="https://di-uploads-pod16.dealerinspire.com/wildejaguarlandroversarasota/uploads/2019/08/jaguar-reliability.jpg">
+            <h1>Our Approach</h1>
+            <h6>
+                The challenge to build a sustainable, cleaner, greener
+    world is one we at Jaguar Land Rover embrace with relish.
+    Our innovative technologies don’t just make better cars,
+    they can help so many people live better lives in so many
+    ways. That is what we are about at Jaguar Land Rover.
+    Making the world a better place.
+
+            </h6>
+        </div>
+    </div>
 
     <div class="second-container">
 
@@ -411,5 +366,23 @@ Making the world a better place.
 
     </div>
 
+<div class="container">
+    <div class="mid-section">
+        <img class="app-right" src="img/rr-1.webp">
+        <h1>Customers And Products</h1>
+        <h5>SUSTAINABLE CHOICES FOR TODAY'S WORLD</h5>
+        <h6>
+            The challenge to build a sustainable, cleaner, greener
+world is one we at Jaguar Land Rover embrace with relish.
+Our innovative technologies don’t just make better cars,
+they can help so many people live better lives in so many
+ways. That is what we are about at Jaguar Land Rover.
+Making the world a better place.
+
+        </h6>
+    </div>
+</div>
+<div id="explore"></div>
+    <script src="js/global.js"></script>
 </body>
 </html>
