--- a/user/om_73/range rover/generations.html
+++ b/user/om_73/range rover/generations.html
@@ -204,9 +204,18 @@
             line-height: 23px;
             font-family: 'Arimo', sans-serif;
         }
+        .first-gen-container h1{
+            color: #e0b68c;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px;
+            font-size: 25px;
+            transform: rotate(0deg);
+        }
         .first-gen-img{
             width: 100%;
-            border-radius: 6px;
+            border: 0px #00000000 solid;
+            transform: rotate(0deg);
+            border-radius: 0px;
         }
         .first-gen-info{
             text-indent: 50px;
@@ -232,13 +241,16 @@
         }
         .gen-container h1{
             font-size: 22px;
+            letter-spacing: 2px;
         }
         .gen-img{
             display: block;
             float: right;
-            padding: 20px;
-            border-radius: 26px;
-            width: 87%;
+            padding: 0px;
+            border: 0px #00000000 solid;
+            border-radius: 0px;
+            transform: rotate(0deg);
+            width: 94%;
         }
         .gen-info{
             text-indent: 25px;
