--- a/user/om_73/range rover/pricing.html
+++ b/user/om_73/range rover/pricing.html
@@ -88,10 +88,10 @@
         .car-detail{
             float: right;
             font-family: 'Jost', sans-serif;
-            width: 80%;
+            width: 78%;
         }
         .car-img{
-            width: 20%;
+            width: 22%;
         }
         .car-title{
             color: var(--richColor);
@@ -118,7 +118,49 @@
         }
         @media screen and (max-width: 768px) {
             .nav-ic{display: block;}
-            .nav-strg{display: none;}}
+            .nav-strg{display: none;}
+            .container{
+                background-color: #fafafa00;
+                box-shadow: 5px 5px 0px rgba(65, 65, 65, 0);
+                 padding: 20px 00px;
+                border-bottom: 0px #b9b9b9 solid;
+                margin: 20px 00px;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            .car-detail{
+                float: right;
+                font-family: 'Jost', sans-serif;
+                width: 50%;
+            }
+            .car-img{
+                width: 50%;
+            }
+            .car-title{
+                color: var(--richColor);
+                text-shadow: 0 0 10px rgba;
+                font-family: 'Cinzel', serif;
+                letter-spacing: 2px;
+                padding: 0px 10px;
+                height: fit-content;
+                border: 2px #e0b68c00 solid;
+                font-size: 12px;
+                font-weight: 900;
+                margin: 10px 0;
+            }
+            .car-info{
+                color: #262626c4;
+                padding: 0px 14px;
+                font-size: 10px;
+                margin: 10px 0;
+            }
+            .car-price{
+                color: #181818de;
+                padding: 5px 10px;
+                font-size: 13px;
+                margin: 10px 0;
+            }
+            .know-more{display: none;}
+        }
     </style>
 </head>
 <body>
