--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -48,8 +48,10 @@
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Group 3</title>
+    <title>Jaguar Land Rover Range Rover - Expanded Models</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
@@ -58,13 +60,229 @@
             background: var(--white);
             user-select: none;
         }
+        center h1{
+            color: #e0b68c;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px;
+        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+        /* font-style: italic; */
+        padding: 10px 20px;
+        border-bottom: 2px rgba(214, 214, 214, 0) solid;
+        font-size: 40px;
+        margin: 15%;
+        height: 30vh;
+    }
+        .exp-container{
+            display: inline-block;
+            border: 2px rgba(211, 211, 211, 0.247) solid;
+            border-radius: 6px;
+            margin: 10px 10px;
+            width: 48%;
+        }
+        .exp-container h1{
+            color: var(--richColor);
+            font-size: 20px;
+        font-family: 'Cinzel', serif;
+        letter-spacing: 2px;
+        }
+        .exp-img{
+            width: 100%;
+        }
+        .exp-details{
+            font-family: 'Jost', sans-serif;
+            line-height: 23px;
+            padding: 10px 20px;
+        }
+        .exp-sec{
+            display: inline-block;
+            width: 47%;
+            border: 2px rgba(0, 0, 0, 0) solid;
+        }
+        .key-feat{
+            padding: 5px 10px;
+            margin: 0px 10px;
+            border-bottom: 2px rgb(211, 211, 211) solid;
+        }
+        .ic-check{
+            transform: rotate(-3deg);
+            color: rgb(0, 208, 59);
+        }
+        .ic-rate{
+            transform: rotate(-3deg);
+            color: rgb(255, 196, 0);
+        }
+        .price-tg{
+            padding-top: 40px;
+        }
+        .price-tg h2{
+            font-weight: normal;
+            font-style: normal;
+            font-display: normal;
+        }
     </style>
 </head>
 <body>
     <div id="navbar"></div><br><br><br><br><br>
     <center>
-        <h1>Generations</h1>
+        <h1>Expanded Models</h1>
     </center>
+
+    <div class="exp-container">
+        <img class="exp-img" src="https://images.hdqwalls.com/download/range-rover-evoque-tuned-1280x720.jpg" draggable="false"><br>
+        <div class="exp-details">
+            <h1>Range Rover Evoque</h1>
+            <div class="rating">
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star-half ic-rate"></i> 4.5 Ratings
+            </div>
+            <div class="exp-sec">
+                <h4>Engine and Transmission</h4>
+                • Transmission Type: Automatic<br>
+                • Engine: Diesel Engine<br>
+                • Engine Type: Diesel Engine<br>
+                • Gear Box: 9-speed automatic <br>
+            </div>
+            <div class="exp-sec">
+                <h4>Fuel & Performance</h4>
+                • Fuel Type: Diesel<br>
+                • Fuel Tank Capacity (Litres): 67.0<br>
+                • Acceleration: 9.3 Sec<br>
+                • Top Speed (Kmph): 230<br>
+            </div>
+            <h4>More Info</h4>
+            • Ground Clearence: 212mm<br>
+            • Breakes: Disc Brakes<br>
+            • Seating Capacity: 5 <br>
+            • Body Type: SUV <br>
+            <h4>Key Features</h4>
+            <span class="key-feat">Anti Lock Breaking Syst. <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
+            <div class="price-tg">
+            <h2>Price: Rs.69.99 Lakh*</h2>
+            </div>
+        </div>
+    </div>
+    <div class="exp-container">
+        <img class="exp-img" src="https://images.hdqwalls.com/download/2018-land-rover-range-rover-vela-qu-1280x720.jpg" draggable="false"><br>
+        <div class="exp-details">
+            <h1>Range Rover Velar</h1>
+            <div class="rating">
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star-half ic-rate"></i> 4.5 Ratings
+            </div>
+            <div class="exp-sec">
+                <h4>Engine and Transmission</h4>
+                • Transmission Type: Automatic<br>
+                • Engine: Petrol Engine <br>
+                • Engine Type: TD4 Engine<br>
+                • Gear Box: 8 Automatic Transmission<br>
+            </div>
+            <div class="exp-sec">
+                <h4>Fuel & Performance</h4>
+                • Fuel Type: Petrol<br>
+                • Fuel Tank Capacity (Litres): 82.0<br>
+                • Acceleration: 7.5 Sec<br>
+                • Top Speed (Kmph): 217<br>
+            </div>
+            <h4>More Info</h4>
+            • Ground Clearence: 156mm<br>
+            • Brakes: Disc Braks<br>
+            • Seating Capacity: 5<br>
+            • Body Type: SUV<br>
+            <h4>Key Features</h4>
+            <span class="key-feat">Anti Lock Breaking Syst. <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
+            <div class="price-tg">
+            <h2>Price: Rs.86.75 - 86.81 Lakh*</h2>
+            </div>
+        </div>
+    </div>
+    <div class="exp-container">
+        <img class="exp-img" src="img/rr-1.webp" draggable="false"><br>
+        <div class="exp-details">
+            <h1>Model Name</h1>
+            <div class="rating">
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star-half ic-rate"></i> 4.5 Ratings
+            </div>
+            <div class="exp-sec">
+                <h4>Engine and Transmission</h4>
+                • Transmission Type: <br>
+                • Engine: <br>
+                • Engine Type: <br>
+                • Gear Box: <br>
+            </div>
+            <div class="exp-sec">
+                <h4>Fuel & Performance</h4>
+                • Fuel Type: <br>
+                • Fuel Tank Capacity (Litres): <br>
+                • Acceleration: <br>
+                • Top Speed: <br>
+            </div>
+            <h4>More Info</h4>
+            • Ground Clearence: <br>
+            • Breakes: <br>
+            • Seating Capacity: <br>
+            • Body Type: <br>
+            <h4>Key Features</h4>
+            <span class="key-feat">Anti Lock Breaking Syst. <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
+            <div class="price-tg">
+            <h2>Price: </h2>
+            </div>
+        </div>
+    </div>
+    <div class="exp-container">
+        <img class="exp-img" src="img/rr-1.webp" draggable="false"><br>
+        <div class="exp-details">
+            <h1>Model Name</h1>
+            <div class="rating">
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star ic-rate"></i>
+                <i class="fa fa-star-half ic-rate"></i> 4.5 Ratings
+            </div>
+            <div class="exp-sec">
+                <h4>Engine and Transmission</h4>
+                • Transmission Type: <br>
+                • Engine: <br>
+                • Engine Type: <br>
+                • Gear Box: <br>
+            </div>
+            <div class="exp-sec">
+                <h4>Fuel & Performance</h4>
+                • Fuel Type: <br>
+                • Fuel Tank Capacity (Litres): <br>
+                • Acceleration: <br>
+                • Top Speed: <br>
+            </div>
+            <h4>More Info</h4>
+            • Ground Clearence: <br>
+            • Breakes: <br>
+            • Seating Capacity: <br>
+            • Body Type: <br>
+            <h4>Key Features</h4>
+            <span class="key-feat">Anti Lock Breaking Syst. <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
+            <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
+            <div class="price-tg">
+            <h2>Price: </h2>
+            </div>
+        </div>
+    </div>
 
     <div id="explore"></div>
     <script src="js/global.js"></script>
