--- a/user/om_73/range rover/info.html
+++ b/user/om_73/range rover/info.html
@@ -104,17 +104,17 @@
             position: absolute;
             content: " ";
             width: 4px;
-            height: 100%;
-            background: #e0b68c00;
-            border-radius: 20px;
+            height: 0%;
+            background: #e0b68c;
+            border-radius: 0px;
             left: 0;
-            bottom: 0%;
-            transition: all 0.1s ease;
+            bottom: 50%;
+            transition: all 0.3s ease;
         }
         .grp-info:hover::after{
-            background: #e0b68c;
             width: 4px;
-            left: 0%;
+            height: 100%;
+            bottom: 0%;
         }
         center h4{
             border-top: 2px rgba(0, 0, 0, 0) solid;
@@ -162,7 +162,7 @@
             font-style: normal;
         }
         .prg-container{
-            display: block;
+            display: none;
             padding: 10px 20px;
             border: 2px rgba(0, 0, 0, 0) solid;
         }
@@ -194,7 +194,7 @@
             box-shadow: 1px 1px 4px rgba( 0, 0, 0, 0.2 );
           }
         progress::-webkit-progress-bar{
-            background-color: rgb(232, 232, 232);
+            background-color: rgb(242, 242, 242);
         }
         progress::-webkit-progress-value{
             background-color: var(--richColor);
@@ -353,7 +353,7 @@
         <div class="grp-sub-container">
             <h4>Group Info:</h4>
 
-        <div id="grp-nme1" class="grp-info">Group members : Om, Prashant, Ruchika & Akash</div>
+        <div id="grp-nme1" class="grp-info">Group members : Om, Akash, Prashant & Ruchika</div>
         <div id="grp-nme1" class="grp-info">Roll No. : 73, 74, 75, 76</div>
         <div id="grp-nme1" class="grp-info">Report by (Unknown)</div>
         <div id="grp-mem1" class="grp-info">Presentaion by (Unknown)</div>
