--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -119,6 +119,68 @@
             font-style: normal;
             font-display: normal;
         }
+        @media screen and (max-width: 768px) {
+            center h1{
+                color: #e0b68c;
+                font-family: 'Cinzel', serif;
+                letter-spacing: 2px;
+            text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+            /* font-style: italic; */
+            padding: 10px 20px;
+            border-bottom: 2px rgba(214, 214, 214, 0) solid;
+            font-size: 40px;
+            margin: 15%;
+            height: 30vh;
+        }
+            .exp-container{
+                display: inline-block;
+                border: 2px rgb(211, 211, 211) solid;
+                border-radius: 6px;
+                margin: 20px 0px;
+                width: 98%;
+            }
+            .exp-container h1{
+                color: var(--richColor);
+                font-size: 18px;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 2px;
+            }
+            .exp-img{
+                width: 100%;
+            }
+            .exp-details{
+                font-size: 10px;
+                font-family: 'Jost', sans-serif;
+                line-height: 23px;
+                padding: 10px 10px;
+            }
+            .exp-sec{
+                display: inline-block;
+                width: 47%;
+                border: 2px rgba(0, 0, 0, 0) solid;
+            }
+            .key-feat{
+                padding: 5px 10px;
+                margin: 0px 10px;
+                border-bottom: 2px rgb(211, 211, 211) solid;
+            }
+            .ic-check{
+                transform: rotate(-3deg);
+                color: rgb(0, 208, 59);
+            }
+            .ic-rate{
+                transform: rotate(-3deg);
+                color: rgb(255, 196, 0);
+            }
+            .price-tg{
+                padding-top: 40px;
+            }
+            .price-tg h2{
+                font-weight: normal;
+                font-style: normal;
+                font-display: normal;
+            }
+        }
     </style>
 </head>
 <body>
